# WTools

./: CMakeLists.txt  compile_flags.txt
include/: log.hpp
include/WTools/: file.hpp  log.hpp  type.hpp  types.hpp
src/: file.cpp  log.cpp  log.hpp
